default/objects/SupplierGuild__c/SupplierGuild__c.object-meta.xml
<CustomObject>
    <label>Supplier Guild</label>
    <nameField>
        <displayFormat>SG-{0000}</displayFormat>
        <label>Supplier Guild Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Guilds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>