default/objects/SupplierGuild__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    AND(
        TODAY() &gt;= StartDate__c,
        TODAY() &lt;= EndDate__c
    ),
    &quot;Active&quot;,
    &quot;Inactive&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>