default/objects/SupplierGuild__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FONTANERO</fullName>
            </value>
            <value>
                <fullName>ALBAÑIL</fullName>
            </value>
            <value>
                <fullName>PINTOR</fullName>
            </value>
            <value>
                <fullName>PARQUETISTA</fullName>
            </value>
            <value>
                <fullName>CERRAJERO</fullName>
            </value>
            <value>
                <fullName>CRISTALERO</fullName>
            </value>
            <value>
                <fullName>PERSIANISTA</fullName>
            </value>
            <value>
                <fullName>ELECTRICISTA</fullName>
            </value>
            <value>
                <fullName>VITROCERAMICA DE TECNICO</fullName>
            </value>
            <value>
                <fullName>MARMOLISTA</fullName>
            </value>
            <value>
                <fullName>LIMPIADOR</fullName>
            </value>
            <value>
                <fullName>ORDENADORES DE TECNICO</fullName>
            </value>
            <value>
                <fullName>ELECTRODOMEST GAMA BLANCA</fullName>
            </value>
            <value>
                <fullName>ELECTRODOMEST GAMA MARRON</fullName>
            </value>
            <value>
                <fullName>TAPICERO</fullName>
            </value>
            <value>
                <fullName>POCERO</fullName>
            </value>
            <value>
                <fullName>ROTULISTA</fullName>
            </value>
            <value>
                <fullName>PERITO</fullName>
            </value>
            <value>
                <fullName>CARPINTERO</fullName>
            </value>
            <value>
                <fullName>PROCURADOR</fullName>
            </value>
            <value>
                <fullName>DETECTIVE</fullName>
            </value>
            <value>
                <fullName>CLINICA MEDICA</fullName>
            </value>
            <value>
                <fullName>HOSPITAL</fullName>
            </value>
            <value>
                <fullName>ABOGADO</fullName>
            </value>
            <value>
                <fullName>CARPINT ALUMINIO</fullName>
            </value>
            <value>
                <fullName>AIRE ACONDICIONADO</fullName>
            </value>
            <value>
                <fullName>ANTENISTA</fullName>
            </value>
            <value>
                <fullName>ESCAYOLISTA</fullName>
            </value>
            <value>
                <fullName>LIMPIEZA FACHADAS</fullName>
            </value>
            <value>
                <fullName>LOZA SANITARIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>